api integration completed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  http: ^0.13.4
   provider: ^6.0.3
   timer_snackbar: ^0.0.3
 
